llvm/src/snapshots/transmute_llvm__tests__assign_local_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

declare ptr @malloc(i64)

define i64 @f(i64 %"n#param#sym19#") {
entry:
  %"m#local#sym20#" = alloca i64, align 8
  store i64 %"n#param#sym19#", ptr %"m#local#sym20#", align 4
  %"m#local#sym20#1" = load i64, ptr %"m#local#sym20#", align 4
  %"add#" = add i64 %"m#local#sym20#1", 1
  store i64 %"add#", ptr %"m#local#sym20#", align 4
  %"m#local#sym20#2" = load i64, ptr %"m#local#sym20#", align 4
  ret i64 %"m#local#sym20#2"
}
