llvm/src/snapshots/transmute_llvm__tests__fibo_iter_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_F1f1n(i64 %"n#param#sym20#") gc "shadow-stack" {
entry:
  switch i64 %"n#param#sym20#", label %end_if3 [
    i64 0, label %common.ret
    i64 1, label %true_branch2
  ]

common.ret:                                       ; preds = %cond, %entry, %true_branch2
  %common.ret.op = phi i64 [ 1, %true_branch2 ], [ 0, %entry ], [ %"current#local#sym23#12", %cond ]
  ret i64 %common.ret.op

true_branch2:                                     ; preds = %entry
  br label %common.ret

end_if3:                                          ; preds = %entry
  call void @gc_run()
  call void @gc_run()
  call void @gc_run()
  br label %cond

cond:                                             ; preds = %body, %end_if3
  %"prev#local#sym22#8" = phi i64 [ %"add#", %body ], [ 1, %end_if3 ]
  %"prev_prev#local#sym21#7" = phi i64 [ %"prev#local#sym22#8", %body ], [ 0, %end_if3 ]
  %"current#local#sym23#12" = phi i64 [ %"add#", %body ], [ 0, %end_if3 ]
  %"n#local#sym20#11" = phi i64 [ %"sub#", %body ], [ %"n#param#sym20#", %end_if3 ]
  %"gt#" = icmp sgt i64 %"n#local#sym20#11", 1
  br i1 %"gt#", label %body, label %common.ret

body:                                             ; preds = %cond
  %"add#" = add i64 %"prev#local#sym22#8", %"prev_prev#local#sym21#7"
  call void @gc_run()
  call void @gc_run()
  call void @gc_run()
  %"sub#" = add i64 %"n#local#sym20#11", -1
  call void @gc_run()
  br label %cond
}

attributes #0 = { nounwind }
